# Nova_Robot

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: nova_description.pc  nova_gazebo.pc  nova_nav.pc  nova_slam.pc
devel/share/nova_description/cmake/: nova_descriptionConfig.cmake
devel/share/nova_gazebo/cmake/: nova_gazeboConfig.cmake
devel/share/nova_nav/cmake/: nova_navConfig.cmake
devel/share/nova_slam/cmake/: nova_slamConfig.cmake
src/nova_description/: CMakeLists.txt  package.xml
src/nova_description/rviz_config/: main.rviz  nav.rviz
src/nova_description/urdf/: nova.gazebo
src/nova_nav/: CMakeLists.txt  package.xml
src/nova_nav/config/param/: costmap_common_params.yaml  local_costmap_params.yaml
src/nova_nav/launch/: amcl.launch  gmapping.launch  move_base.launch  navigation.launch
src/nova_nav/map/: final_map.pgm
src/nova_slam/: CMakeLists.txt  package.xml
src/nova_slam/launch/: amcl.launch  gmapping.launch
